--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ sea-orm = { version = "1.1.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls
 dotenvy = "0.15"
 askama = "0.14.0"
 axum = {version = "0.7"}
+serde = "1.0.228"
 # serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
