--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,7 @@ dotenvy = "0.15"
 askama = "0.14.0"
 axum = {version = "0.7"}
 serde = "1.0.228"
+reqwest = { version = "0.12.23", features = ["json"] }
+serde_json = "1.0.145"
 # serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
