--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,9 @@ serde = "1.0.228"
 reqwest = { version = "0.12.23", features = ["json"] }
 serde_json = "1.0.145"
 toml = "0.9.8"
+tracing-subscriber = "0.3.20"
+tracing = "0.1.41"
+tower = "0.5.2" 
+tower-http = {version = "0.6.2", features = ["trace"] }
 # serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
