--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,6 @@ tracing-subscriber = "0.3.20"
 tracing = "0.1.41"
 tower = "0.5.2" 
 tower-http = {version = "0.6.2", features = ["trace"] }
+log = "0.4.28"
 # serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
