--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ tracing = "0.1.41"
 tower = "0.5.2" 
 tower-http = {version = "0.6.2", features = ["trace"] }
 log = "0.4.28"
+rust-i18n = "3.1.5"
 # serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
