--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,20 @@ migration = { path = "migration" }
 tokio = { version = "1", features = ["full"] }
 sea-orm = { version = "1.1.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 askama = "0.14.0"
-axum = {version = "0.7"}
+axum = {version = "0.8"}
 serde = "1.0.228"
 reqwest = { version = "0.12.23", features = ["json"] }
 serde_json = "1.0.145"
 toml = "0.9.8"
 tracing-subscriber = "0.3.20"
 tracing = "0.1.41"
-tower = "0.5.2" 
+tower = "0.5.2"
 tower-http = {version = "0.6.2", features = ["trace"] }
 log = "0.4.28"
 rust-i18n = "3.1.5"
 # serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
+
+[dev-dependencies]
+axum-test = "18.1.0"
+tokio-test = "0.4"
