--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -1,15 +1,18 @@
-name: main
+name: analyse
 
-on:
-  push:
+on: 
+  push: 
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build_and_test:
-    name: Rust project
+  analyze_and_test:
+    name: Analyze and Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
